Use MapCodec for portal config registry